Fixes Inline toolbar overflow on left and wrap on right

--- a/draft-js-inline-toolbar-plugin/src/toolbarStyles.css
+++ b/draft-js-inline-toolbar-plugin/src/toolbarStyles.css
@@ -8,6 +8,7 @@
   box-shadow: 0px 1px 3px 0px rgba(220,220,220,1);
   z-index: 2;
   box-sizing: border-box;
+  display: flex;
 }
 
 .toolbar:after, .toolbar:before {
